Implementing error responses, for both expected and unexpected. Swagger spec has also been updated.
