# api/src/integration/java/uk/co/baconi/secure/api/bag/BagEndpoint_Reading_IT.java
@@ -69,16 +69,85 @@ public class BagEndpoint_Reading_IT extends IntegratedApiEndpoint {
             body("paging.perPage", is(equalTo(5)));
 
         withNoAuthentication().
-            queryParam("page", 5).
-            queryParam("perPage", 5).
+            queryParam("page", 55).
+            queryParam("perPage", 10).
             get("/bags").
 
             then().assertThat().
 
             statusCode(is(equalTo(HttpStatus.OK.value()))).
 
-            body("paging.page", is(equalTo(5))).
-            body("paging.perPage", is(equalTo(5)))
-        ;
+            body("paging.page", is(equalTo(55))).
+            body("paging.perPage", is(equalTo(10)));
+    }
+
+    @Test
+    public void onFindingBagsWithInvalidPaging() {
+
+        // Max PerPage
+        withNoAuthentication().
+            queryParam("perPage", 50).
+            get("/bags").
+
+            then().assertThat().
+
+            statusCode(is(equalTo(HttpStatus.BAD_REQUEST.value()))).
+
+            body("uuid", isA(String.class)).
+            body("errors", is(not(nullValue()))).
+            body("errors[0]", is(equalTo("PerPage '50' must be less than or equal to 20")));
+
+        // Min PerPage
+        withNoAuthentication().
+            queryParam("perPage", -5).
+            get("/bags").
+
+            then().assertThat().
+
+            statusCode(is(equalTo(HttpStatus.BAD_REQUEST.value()))).
+
+            body("uuid", isA(String.class)).
+            body("errors", is(not(nullValue()))).
+            body("errors[0]", is(equalTo("PerPage '-5' must be greater than or equal to 1")));
+
+        // NaN PerPage
+        withNoAuthentication().
+            queryParam("perPage", "fred").
+            get("/bags").
+
+            then().assertThat().
+
+            statusCode(is(equalTo(HttpStatus.BAD_REQUEST.value()))).
+
+            body("uuid", isA(String.class)).
+            body("errors", is(not(nullValue()))).
+            body("errors[0]", is(equalTo("Param 'perPage' requires type 'java.lang.Integer' but was provided 'fred'")));
+
+
+        // Min Page
+        withNoAuthentication().
+            queryParam("page", -10).
+            get("/bags").
+
+            then().assertThat().
+
+            statusCode(is(equalTo(HttpStatus.BAD_REQUEST.value()))).
+
+            body("uuid", isA(String.class)).
+            body("errors", is(not(nullValue()))).
+            body("errors[0]", is(equalTo("Page '-10' must be greater than or equal to 0")));
+
+        // NaN Page
+        withNoAuthentication().
+            queryParam("page", "bob").
+            get("/bags").
+
+            then().assertThat().
+
+            statusCode(is(equalTo(HttpStatus.BAD_REQUEST.value()))).
+
+            body("uuid", isA(String.class)).
+            body("errors", is(not(nullValue()))).
+            body("errors[0]", is(equalTo("Param 'page' requires type 'java.lang.Integer' but was provided 'bob'")));
     }
 }
