# api/src/main/java/uk/co/baconi/secure/api/exceptions/BaseErrorResponse.java
@@ -1,0 +1,9 @@
+package uk.co.baconi.secure.api.exceptions;
+
+import java.util.UUID;
+
+public interface BaseErrorResponse {
+
+    UUID getUuid();
+
+}
